[package]
name = "one-of"
version = "0.2.1"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2018"
description = "Macro to represent a type that can be converted either `From` or `Into` the given types"
documentation = "https://docs.rs/one-of"
readme = "README.md"
homepage = "https://github.com/figsoda/one-of"
repository = "https://github.com/figsoda/one-of"
license = "MPL-2.0"
keywords = ["data-structures", "enum", "macro", "macros", "type"]
categories = ["data-structures", "no-std", "rust-patterns"]
